...
                                    .clipShape(Circle())
                                    .padding(presenter.selectedColor == color ? 10 : 0)
                            )
                            .onTapGesture {
                                presenter.onColorPressed(color: color)
                            }
                            .accessibilityIdentifier("ColorCircle")
                    }
                } header: {
                    Text("Select a profile color")
                        .multilineTextAlignment(.center)
                        .font(.headline)
                        .frame(maxWidth: .infinity)
...
    func ctaButton(selectedColor: Color) -> some View {
        Text("Continue")
            .callToActionButton()
            .anyButton(.press) {
                presenter.onContinuePress()
            }
            .accessibilityIdentifier("ContinueButton")
    }
}

#Preview {
    let contaner = DevPreview.shared.container
    let onboardingColorBuilder = OnboardingColorBuilder(container: contaner)
...
