...
            .padding(.horizontal, 16)
            .padding(.top, 8)
        }
        .background(Color(uiColor: .systemGroupedBackground))
        .lineLimit(1)
        .minimumScaleFactor(0.5)
        .navigationTitle("Settings")
        .onAppear {
            viewModel.setAnonymousAccountStatus()
        }
        .screenAppearAnalytics(name: "SettingsView")
        .showCustomAlert(alert: $viewModel.alert)
    }
...
                        action: viewModel.onCreateAccountPressed,
                        isFirst: true,
                        isLast: false
                    )
                } else {
                    SettingRowButton(
                        title: "Sign Out",
                        textColor: .primary,
                        action: viewModel.onSignOutPressed,
                        isFirst: true,
                        isLast: false
                    )
                }
...
